Fix SDK references.

--- a/WebTestBot/index.html
+++ b/WebTestBot/index.html
@@ -184,7 +184,7 @@
             </h3>
 
             <div ng-show="!client.isConnected()">
-                Connecting the SDK autotest bot, please wait...
+                Connecting the Respoke sample app autotest bot, please wait...
             </div>
 
             <div id="remoteVideoSource"></div>
